style.css
/* ... */
.wrapper__body {
  flex: 6;
  margin: 0 10px 0 0;
  padding-right: 15px;
}

.wrapper__text {
  flex: 3;
}

.has-huge-font-size,
.has-large-font-size,
.has-medium-font-size {
  color: #b7313f;
}

.wrapper__main p {
  padding: 20px 0;
}

p::selection,
h1::selection,
h2::selection,
h3::selection,
h4::selection,
h5::selection {
  background-color: #b7313f;
  color: white;
}

.mobilenav__overflow {
  height: 100%;
  overflow: hidden;
}

.mobilenav {
  display: none;
  width: 100%;
  height: 100vh;
  background: rgba(0, 0, 0, 0.2);
  position: absolute;
  top: 0;
  right: 0;
  overflow: auto;
  overflow-x: hidden;
  z-index: 10000;
}

/* toggle menu */
.mobilenav_open {
  display: block;
}

@keyframes showMenu {
  0.0% {
    transform: translate(100%);
  }

  100% {
    transform: translate(0%);
  }
}

.mobilenav__menu {
  height: 100vh;
  max-width: 400px;
  margin-left: auto;
  overflow: auto;
  background-color: white;
  padding-bottom: 40px;
  animation: showMenu 500ms ease-in 0s 1 normal none;
}

.mobilenav__top {
  display: flex;
  flex-flow: nowrap row;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px;
}

.mobilenav__logo {
  background-image: url("./assets/images/logo.svg");
  background-repeat: no-repeat;
  background-position: left;
  background-size: contain;
  height: 100px;
  width: 190px;
}

/* mobile menu */
div.nav-mobile {
  width: 100%;
  padding: 25px 0 0 25px;
  margin: 0;
}

div.nav-mobile ul {
  list-style: none;
  margin: 0 auto;
  padding: 0;
  position: relative;
  display: flex;
  flex-flow: nowrap column;
  font-weight: 700;
}

div.nav-mobile li {
  line-height: 1.7;
}

div.nav-mobile a {
  color: #454545;
  text-decoration: none;
  display: block;
}

div.nav-mobile > ul > li {
  float: left;
}

div.nav-mobile > ul > li > a {
  padding: 10px 10px;
}

/* Sub/Children Menu */
div.nav-mobile .sub-menu,
div.nav-mobile .children {
  width: 100%;
  padding: 0 20px;
}

div.nav-mobile .sub-menu a,
div.nav-mobile .children a {
  padding: 5px 10px;
  color: #454545;
  font-weight: 300;
}

/* Grandchildren Menu */
div.nav-mobile .sub-menu .sub-menu,
div.nav-mobile .children .children {
  display: none;
  position: absolute;
  left: 100%;
  top: 0;
  background: #f5f5f5;
}

.searchbar {
  height: 20px;
  display: none;
  justify-content: center;
  padding: 29px 0 1px 0;
}

.searchbar_open {
  display: flex;
}

.search__input {
  padding: 10px;
  min-width: 400px;
  margin-right: 30px;
  outline: none;
  border: none;
  border: 1px solid #e5e5e9;
  border-radius: 7px;
  /* border-bottom: 1px solid var(--main-red); */
  --webkit-appearance: none;
}

.search__input::placeholder {
  color: #e5e5e9;
}

.search__input:focus {
  border: 1px solid var(--main-red);
  outline: none;
  --webkit-appearance: none;
}

.search__submit::placeholder {
  padding-left: 10px;
}

.search__submit {
  border: none;
  padding: 0.8rem 1.2rem;
  cursor: pointer;
  background-color: var(--main-red);
  color: white;
  border-radius: 5px;
  text-transform: uppercase;
  font-weight: 200;
  font-size: 0.7rem;
}

.post {
  margin-top: 28px;
}

/* post content */
.post p {
  padding: 2px 0;
}

.post__link {
  text-decoration: none;
  color: black;
  font-weight: 400;
  line-height: 2;
}

.post__more {
  text-decoration: none;
  font-size: 0.8rem;
  color: black;
  display: block;
}

.screen-reader-text {
  display: none;
}

.nav-links {
  margin-top: 42.5px;
}

.search .searchbar {
  display: flex;
}

.noresult {
  min-height: 200px;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media screen and (max-width: 1200px) {
  .topbar__middle {
    flex-wrap: wrap;
  }

  .topbar__fontsize {
    display: flex;
    justify-content: right;
    align-content: center;
  }

  .topbar__middle {
    max-width: 500px;
    padding-right: 60px;
  }

  .topbar__middle-item {
    padding: 3px 0;
    width: 34%;
    justify-content: flex-end;
  }
}

@media screen and (max-width: 992px) {
  .topbar__hr {
    display: none;
  }

  .topbar__middle,
  .topbar__links {
    display: none;
  }

  .topbar__menu {
    display: flex;
  }

  .navwrapper {
    display: none;
  }

  .pagebanner {
    margin-top: 0 !important;
  }

  .searchbar {
    padding: 40px 0 25px 0 !important;
    align-items: flex-end;
  }

  .container,
  .wrapper {
    max-width: 1215px;
    margin: 0 auto;
    padding: 20px 20px;
  }

  .sidebar {
    display: none;
  }

  .topbar {
    padding: 0 10px;
    height: 90px;
  }

  main {
    margin-top: 5px;
  }

  .topbar__logo {
    height: 85px;
  }

  .topbar__logo_main {
    background-size: 0 0;
    width: 0;
    height: 0;
  }

  .pagebanner {
    height: 120px;
  }

  .pagebanner__header {
    font-size: 1.3rem;
    text-align: center;
  }

  .search__input {
    width: 100px;
    --webkit-appearance: none;
  }
}

@media screen and (max-width: 992px) {
  .search__input {
    margin-right: 5px;
  }
}

@media screen and (max-width: 673px) {
  .search__input {
    min-width: 200px;
  }
}

